[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Piero <matematicadivina1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.3.1"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
